# dispalecdCamp

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 10fb1881878c_initial_schema.py  674137d4bd8b_full_schema.py  eeb5f8a4de86_add_users_table.py
app/: admin.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  families.py  users.py
app/core/: config.py  errors.py  security.py
app/db/: session.py
app/models/: enums.py  family.py  lookups.py  user.py
app/schemas/: family.py  user.py
app/services/: family_service.py  user_service.py
app/templates/: dashboard.html
templates/: index.html
