[project]
name = "dispalecdcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.124.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "starlette-admin>=0.16.0",
    "uvicorn>=0.38.0",
]
